src/main/java/org/example/antlr/delphiParser.java
// Generated from E:/Masters/Spring 2025/PLP/Projects/Delphi/src/main/delphi.g4 by ANTLR 4.13.2

package org.example.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, CONSTRUCTOR=2, DESTRUCTOR=3, PRIVATE=4, PUBLIC=5, PROTECTED=6, 
		AND=7, ARRAY=8, BEGIN=9, BOOLEAN=10, CASE=11, CHAR=12, CHR=13, CONST=14, 
		DIV=15, DO=16, DOWNTO=17, ELSE=18, END=19, FILE=20, FOR=21, FUNCTION=22, 
		GOTO=23, IF=24, IN=25, INTEGER=26, LABEL=27, MOD=28, NIL=29, NOT=30, OF=31, 
		OR=32, PACKED=33, PROCEDURE=34, PROGRAM=35, REAL=36, RECORD=37, REPEAT=38, 
		SET=39, THEN=40, TO=41, TYPE=42, UNTIL=43, VAR=44, WHILE=45, WITH=46, 
		PLUS=47, MINUS=48, STAR=49, SLASH=50, ASSIGN=51, COMMA=52, SEMI=53, COLON=54, 
		EQUAL=55, NOT_EQUAL=56, LT=57, LE=58, GE=59, GT=60, LPAREN=61, RPAREN=62, 
		LBRACK=63, LBRACK2=64, RBRACK=65, RBRACK2=66, POINTER=67, AT=68, DOT=69, 
		DOTDOT=70, LCURLY=71, RCURLY=72, UNIT=73, INTERFACE=74, USES=75, STRING=76, 
		IMPLEMENTATION=77, TRUE=78, FALSE=79, WS=80, COMMENT_1=81, COMMENT_2=82, 
		IDENT=83, STRING_LITERAL=84, NUM_INT=85, NUM_REAL=86;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_identifier = 2, RULE_block = 3, 
		RULE_classBlock = 4, RULE_usesUnitsPart = 5, RULE_labelDeclarationPart = 6, 
		RULE_label = 7, RULE_constantDefinitionPart = 8, RULE_constantDefinition = 9, 
		RULE_constantChr = 10, RULE_constant = 11, RULE_unsignedNumber = 12, RULE_unsignedInteger = 13, 
		RULE_unsignedReal = 14, RULE_sign = 15, RULE_bool_ = 16, RULE_string = 17, 
		RULE_typeDefinitionPart = 18, RULE_typeDefinition = 19, RULE_functionType = 20, 
		RULE_procedureType = 21, RULE_type_ = 22, RULE_simpleType = 23, RULE_scalarType = 24, 
		RULE_subrangeType = 25, RULE_typeIdentifier = 26, RULE_structuredType = 27, 
		RULE_unpackedStructuredType = 28, RULE_stringtype = 29, RULE_arrayType = 30, 
		RULE_typeList = 31, RULE_indexType = 32, RULE_componentType = 33, RULE_recordType = 34, 
		RULE_fieldList = 35, RULE_fixedPart = 36, RULE_recordSection = 37, RULE_variantPart = 38, 
		RULE_tag = 39, RULE_variant = 40, RULE_setType = 41, RULE_baseType = 42, 
		RULE_fileType = 43, RULE_pointerType = 44, RULE_variableDeclarationPart = 45, 
		RULE_variableDeclaration = 46, RULE_classVariableDeclarationPart = 47, 
		RULE_procedureAndFunctionDeclarationPart = 48, RULE_classProcedureAndFunctionDeclarationPart = 49, 
		RULE_procedureOrFunctionDeclaration = 50, RULE_classProcedureOrFunctionDeclaration = 51, 
		RULE_procedureDeclaration = 52, RULE_classProcedureDeclaration = 53, RULE_formalParameterList = 54, 
		RULE_formalParameterSection = 55, RULE_parameterGroup = 56, RULE_identifierList = 57, 
		RULE_constList = 58, RULE_functionDeclaration = 59, RULE_classFunctionDeclaration = 60, 
		RULE_methodImplementation = 61, RULE_constructorImplementation = 62, RULE_destructorImplementation = 63, 
		RULE_visibility = 64, RULE_resultType = 65, RULE_classDeclarationPart = 66, 
		RULE_statement = 67, RULE_unlabelledStatement = 68, RULE_simpleStatement = 69, 
		RULE_classMethodStatement = 70, RULE_assignmentStatement = 71, RULE_variable = 72, 
		RULE_expression = 73, RULE_relationaloperator = 74, RULE_simpleExpression = 75, 
		RULE_additiveoperator = 76, RULE_term = 77, RULE_multiplicativeoperator = 78, 
		RULE_signedFactor = 79, RULE_factor = 80, RULE_unsignedConstant = 81, 
		RULE_functionDesignator = 82, RULE_parameterList = 83, RULE_classMethodDesignator = 84, 
		RULE_set_ = 85, RULE_elementList = 86, RULE_element = 87, RULE_procedureStatement = 88, 
		RULE_actualParameter = 89, RULE_parameterwidth = 90, RULE_gotoStatement = 91, 
		RULE_emptyStatement_ = 92, RULE_structuredStatement = 93, RULE_compoundStatement = 94, 
		RULE_statements = 95, RULE_conditionalStatement = 96, RULE_ifStatement = 97, 
		RULE_caseStatement = 98, RULE_caseListElement = 99, RULE_repetetiveStatement = 100, 
		RULE_whileStatement = 101, RULE_repeatStatement = 102, RULE_forStatement = 103, 
		RULE_forList = 104, RULE_initialValue = 105, RULE_finalValue = 106, RULE_withStatement = 107, 
		RULE_recordVariableList = 108;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "identifier", "block", "classBlock", "usesUnitsPart", 
			"labelDeclarationPart", "label", "constantDefinitionPart", "constantDefinition", 
			"constantChr", "constant", "unsignedNumber", "unsignedInteger", "unsignedReal", 
			"sign", "bool_", "string", "typeDefinitionPart", "typeDefinition", "functionType", 
			"procedureType", "type_", "simpleType", "scalarType", "subrangeType", 
			"typeIdentifier", "structuredType", "unpackedStructuredType", "stringtype", 
			"arrayType", "typeList", "indexType", "componentType", "recordType", 
			"fieldList", "fixedPart", "recordSection", "variantPart", "tag", "variant", 
			"setType", "baseType", "fileType", "pointerType", "variableDeclarationPart", 
			"variableDeclaration", "classVariableDeclarationPart", "procedureAndFunctionDeclarationPart", 
			"classProcedureAndFunctionDeclarationPart", "procedureOrFunctionDeclaration", 
			"classProcedureOrFunctionDeclaration", "procedureDeclaration", "classProcedureDeclaration", 
			"formalParameterList", "formalParameterSection", "parameterGroup", "identifierList", 
			"constList", "functionDeclaration", "classFunctionDeclaration", "methodImplementation", 
			"constructorImplementation", "destructorImplementation", "visibility", 
			"resultType", "classDeclarationPart", "statement", "unlabelledStatement", 
			"simpleStatement", "classMethodStatement", "assignmentStatement", "variable", 
			"expression", "relationaloperator", "simpleExpression", "additiveoperator", 
			"term", "multiplicativeoperator", "signedFactor", "factor", "unsignedConstant", 
			"functionDesignator", "parameterList", "classMethodDesignator", "set_", 
			"elementList", "element", "procedureStatement", "actualParameter", "parameterwidth", 
			"gotoStatement", "emptyStatement_", "structuredStatement", "compoundStatement", 
			"statements", "conditionalStatement", "ifStatement", "caseStatement", 
			"caseListElement", "repetetiveStatement", "whileStatement", "repeatStatement", 
			"forStatement", "forList", "initialValue", "finalValue", "withStatement", 
			"recordVariableList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CLASS'", "'CONSTRUCTOR'", "'DESTRUCTOR'", "'PRIVATE'", "'PUBLIC'", 
			"'PROTECTED'", "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CASE'", 
			"'CHAR'", "'CHR'", "'CONST'", "'DIV'", "'DO'", "'DOWNTO'", "'ELSE'", 
			"'END'", "'FILE'", "'FOR'", "'FUNCTION'", "'GOTO'", "'IF'", "'IN'", "'INTEGER'", 
			"'LABEL'", "'MOD'", "'NIL'", "'NOT'", "'OF'", "'OR'", "'PACKED'", "'PROCEDURE'", 
			"'PROGRAM'", "'REAL'", "'RECORD'", "'REPEAT'", "'SET'", "'THEN'", "'TO'", 
			"'TYPE'", "'UNTIL'", "'VAR'", "'WHILE'", "'WITH'", "'+'", "'-'", "'*'", 
			"'/'", "':='", "','", "';'", "':'", "'='", "'<>'", "'<'", "'<='", "'>='", 
			"'>'", "'('", "')'", "'['", "'(.'", "']'", "'.)'", "'^'", "'@'", "'.'", 
			"'..'", "'{'", "'}'", "'UNIT'", "'INTERFACE'", "'USES'", "'STRING'", 
			"'IMPLEMENTATION'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "CONSTRUCTOR", "DESTRUCTOR", "PRIVATE", "PUBLIC", "PROTECTED", 
			"AND", "ARRAY", "BEGIN", "BOOLEAN", "CASE", "CHAR", "CHR", "CONST", "DIV", 
			"DO", "DOWNTO", "ELSE", "END", "FILE", "FOR", "FUNCTION", "GOTO", "IF", 
			"IN", "INTEGER", "LABEL", "MOD", "NIL", "NOT", "OF", "OR", "PACKED", 
			"PROCEDURE", "PROGRAM", "REAL", "RECORD", "REPEAT", "SET", "THEN", "TO", 
			"TYPE", "UNTIL", "VAR", "WHILE", "WITH", "PLUS", "MINUS", "STAR", "SLASH", 
			"ASSIGN", "COMMA", "SEMI", "COLON", "EQUAL", "NOT_EQUAL", "LT", "LE", 
			"GE", "GT", "LPAREN", "RPAREN", "LBRACK", "LBRACK2", "RBRACK", "RBRACK2", 
			"POINTER", "AT", "DOT", "DOTDOT", "LCURLY", "RCURLY", "UNIT", "INTERFACE", 
			"USES", "STRING", "IMPLEMENTATION", "TRUE", "FALSE", "WS", "COMMENT_1", 
			"COMMENT_2", "IDENT", "STRING_LITERAL", "NUM_INT", "NUM_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public TerminalNode DOT() { return getToken(delphiParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(delphiParser.EOF, 0); }
		public TerminalNode INTERFACE() { return getToken(delphiParser.INTERFACE, 0); }
		public List<ClassDeclarationPartContext> classDeclarationPart() {
			return getRuleContexts(ClassDeclarationPartContext.class);
		}
		public ClassDeclarationPartContext classDeclarationPart(int i) {
			return getRuleContext(ClassDeclarationPartContext.class,i);
		}
		public List<TerminalNode> END() { return getTokens(delphiParser.END); }
		public TerminalNode END(int i) {
			return getToken(delphiParser.END, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218);
			programHeading();
			setState(220);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INTERFACE) {
				{
				setState(219);
				match(INTERFACE);
				}
			}

			setState(228);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(222);
				classDeclarationPart();
				setState(223);
				match(END);
				setState(224);
				match(SEMI);
				}
				}
				setState(230);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(234);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 22007550853632L) != 0) || _la==USES || _la==IMPLEMENTATION) {
				{
				{
				setState(231);
				block();
				}
				}
				setState(236);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(237);
			match(DOT);
			setState(238);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(delphiParser.PROGRAM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(delphiParser.LPAREN, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(delphiParser.RPAREN, 0); }
		public TerminalNode UNIT() { return getToken(delphiParser.UNIT, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgramHeading(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgramHeading(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitProgramHeading(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			setState(254);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PROGRAM:
				enterOuterAlt(_localctx, 1);
				{
				setState(240);
				match(PROGRAM);
				setState(241);
				identifier();
				setState(246);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LPAREN) {
					{
					setState(242);
					match(LPAREN);
					setState(243);
					identifierList();
					setState(244);
					match(RPAREN);
					}
				}

				setState(248);
				match(SEMI);
				}
				break;
			case UNIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(250);
				match(UNIT);
				setState(251);
				identifier();
				setState(252);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof delphiVisitor ) return ((delphiVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(256);
			match(IDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
